--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
+    "expo-location": "~19.0.8",
     "expo-network": "~8.0.8",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
